# Shader-Graph

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conventions.md
data/: Output.glsl  ShaderGraph_Output.txt  ShagerGraph_Output.txt  nodestyle.txt
data/shaders/: DefaultLight.glsl  DefaultVertexShader.glsl  DirectionalLight.glsl  Material.glsl  RedShader.glsl
data/shaders/runtime/: Fragment.glsl  Material.glsl  Vertex.glsl
data/shaders/runtime/Transform/: TransformStructs.glsl
data/shaders/source/: MaterialModelFooter.txt  MaterialModelHeader.txt  MicrofacetFunction.glsl  PBRCommon.frag.glsl  PBRCommon.vert.glsl
data/shaders/source/Transform/: ._TransformStructs.glsl
doc/: directoryStructure.md  start_working.md
output/: shader.glsl
packaging/: CMakeLists.txt  ShaderGraph.desktop  ShaderGraph.icns  ShaderGraph.icon.in.rc
source/: CMakeLists.txt  main.cpp
source/core/: Core.h  Defines.h
source/core/log/: Log.cpp  Log.h
source/detail/: DetailDecl.h  DetailLeaf.cpp  DetailLeaf.h  DetailNode.cpp  DetailNode.h
source/detail/leaf/: DetailBoolean.cpp  DetailBoolean.h  DetailScalar.cpp  DetailScalar.h  DetailText.cpp  DetailText.h  DetailUniform.cpp  DetailUniform.h  DetailVector.cpp  DetailVector.h
source/manager/: NodeManager.cpp
source/model/: ColorNode.cpp  ColorNode.h  Compilation.cpp  Compilation.h  Data.h  Example.cpp  Example.h  InputNode.cpp  InputNode.h  Interface.h  Node.cpp  Node.h  NodeDecl.h  NodeManager.cpp  NodeManager.h  OutputNode.cpp  OutputNode.h  ScalarNode.cpp  ScalarNode.h  Vec2Node.cpp  Vec2Node.h  Vec3Node.cpp  Vec3Node.h  Vec4Node.cpp  Vec4Node.h
source/model/abstractor/: Abstractor.cpp  Abstractor.h
source/model/converter/: Converter.cpp  Converter.h  FromTemplate.cpp  FromTemplate.h  ToTemplate.cpp  ToTemplate.h
source/model/function/: VectorFunctions.cpp  VectorFunctions.h
source/model/glsl/: Common.cpp  Common.h  GLSL.cpp  GLSL.h
source/model/input/: BooleanNode.cpp  BooleanNode.h  ColorNode.cpp  ColorNode.h  CoordinatesExpressions.cpp  CoordinatesExpressions.h  GetterNode.cpp  GetterNode.h  TextureNode.cpp  TextureNode.h  VectorNode.cpp  VectorNode.h
source/model/manager/: NodeManager.h
source/model/math/: Math.cpp  Math.h
source/model/misc/: VectorFunctions.h
source/model/operator/: BoolOperator.cpp  BoolOperator.h  CommonOperator.cpp  CommonOperator.h  FloatOperator.cpp  FloatOperator.h  Operator.cpp  Operator.h  Vec2Operator.cpp  Vec2Operator.h  Vec3Operator.cpp  Vec3Operator.h  Vec4Operator.cpp  Vec4Operator.h
source/model/output/: MasterMaterialOutput.cpp  MasterMaterialOutput.h
source/nodeeditor/: FlowScene.cpp  FlowScene.h  FlowView.cpp  FlowView.h  NodeGraphicsView.cpp  NodeGraphicsView.h  NodeManager.cpp
source/pin/: BooleanPin.cpp  BooleanPin.h  FloatPin.cpp  FloatPin.h  IPin.h  Pin.h  PinDecl.h  TemplatePin.cpp  TemplatePin.h  VectorPin.cpp  VectorPin.h
source/preview/: Camera.cpp  Camera.h  OpenGL.cpp  OpenGL.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/qt/: GLWidget.cpp  GLWidget.h  NodeGraphicsView.cpp  NodeGraphicsView.h  WidgetNodeEditor.cpp  WidgetNodeEditor.h  Window.cpp  Window.h  Window.ui
source/unittest/: CMakeLists.txt  testmain.cpp
src/: CMakeLists.txt  main.cpp  models.hpp
src/core/: Core.h  Defines.h
src/core/logging/: Log.h
src/model/: NodeManager.h
src/model/type/: NodeBoolean.cpp  NodeBoolean.h  NodeFloat.h  NodeImage.cpp  NodeImage.h
test/: CMakeLists.txt
